# prompt_video

./: README.md  pyproject.toml  requirements.txt  ui.py
src/prompt_video/: assembly.py  audio_generation.py  image_to_video.py  lip_sync.py  main.py  pipeline.py  text_to_image.py
src/prompt_video.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_pipeline.py
