[project]
name = "prompt_video"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pillow",
    "torch",
    "diffusers",
    "transformers",
    "moviepy",
    "gTTS",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
